# DRDO_Project

./: Clang_AST_Architecture_Document.docx  Java_AST_Documentation.docx  clang_ast  java_code_ast  rule_vs_mainProg.txt
ClangTidyExample/: AvoidGotoCheck.cpp  AvoidGotoCheck.h  CMakeLists.txt  ClangTidy.cpp  ClangTidy.h  ClangTidyOptions.cpp  ClangTidyOptions.h  main.cpp
MISRA-ClangTidy-AI/Notes/: MISRA_C_Rules.docx  misra_overview.docx  misra_overview.txt  misra_rules_examples_scenarios.txt
MISRA-ClangTidy-AI/clang tidy and llvm/: LLVM_Clang_Overview.docx
MISRA-ClangTidy-AI/clang-tidy/: clang_static_analyzer.txt  clang_tidy.txt
